<resources>
    <string name="app_name">WeTales</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Stories</string>
    <string name="heading_my_top_posts">My Top Stories</string>
    <string name="appName">WeTales</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="loginField">Login</string>
    <string name="register">Signup</string>
    <string name="create_a_new_story">New Story</string>
    <string name="story_title">Story Title</string>
    <string name="num_of_participants"># Of Participants</string>
    <string name="num_of_rounds"># Of Rounds</string>
    <string name="first_sentence">First Sentence</string>
    <string name="second_sentence">Second Sentance</string>
    <string name="create">Create</string>
    <string name="publish">Publish</string>
    <string name="heading_my_stories">My Stories</string>
    <string name="heading_my_top_stories">Top Stories</string>
    <string name="send">Send</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="title">Title</string>
    <string name="write_your_story">Write your story...</string>
    <string name="menu_settings">Settings</string>
    <string name="join">Join</string>
    <string name="max_of_participants">Max # of Participants</string>
    <string name="start_writing_your_story">Start writing your story...</string>
    <string name="story_image">Story Image</string>
    <string name="previous_content">...</string>
    <string name="continue_the_story_here">Continue the story here</string>
    <string name="buzz_format">Buzz %s</string>
    <string name="discover">Discover</string>
    <string name="slogan">Cooperative Fiction</string>
    <string name="story_is_full">The story is in progress and full of participants</string>
    <string name="story_buzz">Waiting for next user to response</string>
    <plurals name="minimum_par_to_start">
        <item quantity="one">Need minimum %d more user to start</item>
        <item quantity="other">Need minimum %d more users to start</item>
    </plurals>
</resources>
